Download yellow trip parquet files to `01-introduction-mlops/data`

--- a/01-introduction-mlops/homework/homework1.ipynb
+++ b/01-introduction-mlops/homework/homework1.ipynb
@@ -1,10 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Homework 1 - Introduction to MLOps",
+   "id": "c5d8bc5d4c9eec88"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T09:41:57.743135Z",
-     "start_time": "2025-05-20T09:41:56.440036Z"
+     "end_time": "2025-05-21T05:32:46.012360Z",
+     "start_time": "2025-05-21T05:32:44.955063Z"
     }
    },
    "cell_type": "code",
@@ -12,14 +18,34 @@
     "import polars as pl\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error"
+   ],
+   "id": "c88272df21cbdae8",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-21T05:35:26.556659Z",
+     "start_time": "2025-05-21T05:35:26.549573Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "DOWNLOAD_FROM_URL = False\n",
     "\n",
-    "TRAIN_DATA_FILE_PATH = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet'\n",
-    "VAL_DATA_FILE_PATH = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet'"
+    "TRIP_DATA_URL = 'https://d37ci6vzurychx.cloudfront.net/trip-data'\n",
+    "TRIP_DATA_LOCAL_PATH = '../data'\n",
+    "\n",
+    "base_path = TRIP_DATA_URL if DOWNLOAD_FROM_URL else TRIP_DATA_LOCAL_PATH\n",
+    "\n",
+    "train_data_file_location = f'{base_path}/yellow_tripdata_2023-01.parquet'\n",
+    "val_data_file_location = f'{base_path}/yellow_tripdata_2023-02.parquet'"
    ],
    "id": "a9e60bb476ba9763",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -43,21 +69,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T09:42:05.264140Z",
-     "start_time": "2025-05-20T09:41:57.847822Z"
+     "end_time": "2025-05-21T05:49:21.464235Z",
+     "start_time": "2025-05-21T05:49:21.246646Z"
     }
    },
    "cell_type": "code",
-   "source": "jan_df = pl.read_parquet(source=TRAIN_DATA_FILE_PATH)",
+   "source": "jan_df = pl.read_parquet(source=train_data_file_location)",
    "id": "554483b9355b9593",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T09:42:05.279504Z",
-     "start_time": "2025-05-20T09:42:05.274816Z"
+     "end_time": "2025-05-21T05:49:23.029424Z",
+     "start_time": "2025-05-21T05:49:23.019175Z"
     }
    },
    "cell_type": "code",
@@ -70,12 +96,12 @@
        "19"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -103,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T09:42:05.348515Z",
-     "start_time": "2025-05-20T09:42:05.322018Z"
+     "end_time": "2025-05-21T05:49:26.083103Z",
+     "start_time": "2025-05-21T05:49:26.056354Z"
     }
    },
    "cell_type": "code",
@@ -117,7 +143,7 @@
    ],
    "id": "be5df68e93554bcc",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -318,7 +344,7 @@
     "What's the RMSE on train?\n",
     "\n",
     "* 3.64\n",
-    "* 7.64\n",
+    "* **7.64**\n",
     "* 11.64\n",
     "* 16.64"
    ],
@@ -382,7 +408,7 @@
     "What's the RMSE on validation?\n",
     "\n",
     "* 3.81\n",
-    "* 7.81\n",
+    "* **7.81**\n",
     "* 11.81\n",
     "* 16.81"
    ],
@@ -394,7 +420,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "feb_df = pl.read_parquet(source=VAL_DATA_FILE_PATH)\n",
+    "feb_df = pl.read_parquet(source=val_data_file_location)\n",
     "\n",
     "feb_df = feb_df.with_columns(\n",
     "    (pl.col(\"tpep_dropoff_datetime\") - pl.col(\"tpep_pickup_datetime\"))\n",
