Add Hyperparameter optimization mlflow-logging notebook

--- a/02-experiment-tracking/notebooks/getting_started_mlflow.ipynb
+++ b/02-experiment-tracking/notebooks/getting_started_mlflow.ipynb
@@ -5,12 +5,12 @@
    "id": "4add538c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:37:17.747007Z",
-     "start_time": "2025-05-26T07:37:17.658575Z"
+     "end_time": "2025-05-26T07:51:44.933073Z",
+     "start_time": "2025-05-26T07:51:44.927843Z"
     }
    },
    "source": [
-    "import pickle\n",
+    "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -28,13 +28,13 @@
     "MODEL_OUTPUT_PATH = '../models/lin_reg.bin'"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:37:37.199920Z",
-     "start_time": "2025-05-26T07:37:35.601327Z"
+     "end_time": "2025-05-26T07:51:44.970863Z",
+     "start_time": "2025-05-26T07:51:44.962806Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +44,7 @@
     "\n",
     "home_path_str = Path.home()\n",
     "backend_store_uri = f'sqlite:///{home_path_str}/mlflow/backend/mlflow.db'\n",
-    "artifact_location = f'file:{home_path_str}/mlflow/artifacts'\n",
+    "artifact_location = f'file:{home_path_str}/mlflow/mlruns'\n",
     "\n",
     "# Setting backend store\n",
     "mlflow.set_tracking_uri(uri=backend_store_uri)\n",
@@ -61,16 +61,27 @@
     "mlflow.set_experiment(experiment_name=experiment_name)"
    ],
    "id": "2aafcccd47694cb0",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:/home/jxareas/mlflow/artifacts', creation_time=1748245057181, experiment_id='1', last_update_time=1748245057181, lifecycle_stage='active', name='green-taxi-nyc-trip-duration', tags={}>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
   },
   {
    "cell_type": "code",
    "id": "8e013caf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:50.048300Z",
-     "start_time": "2025-05-26T07:42:49.729753Z"
+     "end_time": "2025-05-26T07:51:45.309390Z",
+     "start_time": "2025-05-26T07:51:45.040433Z"
     }
    },
    "source": [
@@ -87,15 +98,15 @@
     "df[categorical] = df[categorical].astype(str)"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 25
   },
   {
    "cell_type": "code",
    "id": "116ff0cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:51.180985Z",
-     "start_time": "2025-05-26T07:42:50.928173Z"
+     "end_time": "2025-05-26T07:51:45.621380Z",
+     "start_time": "2025-05-26T07:51:45.336185Z"
     }
    },
    "source": [
@@ -121,20 +132,20 @@
        "9.838799799829623"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 26
   },
   {
    "cell_type": "code",
    "id": "b134c97b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:54.790682Z",
-     "start_time": "2025-05-26T07:42:53.893101Z"
+     "end_time": "2025-05-26T07:51:46.677381Z",
+     "start_time": "2025-05-26T07:51:45.721087Z"
     }
    },
    "source": [
@@ -147,10 +158,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x78c3c1be6510>"
+       "<matplotlib.legend.Legend at 0x78c3a2f3c2d0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,15 +176,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 27
   },
   {
    "cell_type": "code",
    "id": "f9e6479e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:55.758153Z",
-     "start_time": "2025-05-26T07:42:55.752085Z"
+     "end_time": "2025-05-26T07:51:46.712619Z",
+     "start_time": "2025-05-26T07:51:46.709176Z"
     }
    },
    "source": [
@@ -197,15 +208,15 @@
     "    return green_taxi_trips"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 28
   },
   {
    "cell_type": "code",
    "id": "8029eba0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:58.797361Z",
-     "start_time": "2025-05-26T07:42:58.401400Z"
+     "end_time": "2025-05-26T07:51:47.168788Z",
+     "start_time": "2025-05-26T07:51:46.775427Z"
     }
    },
    "source": [
@@ -213,15 +224,15 @@
     "df_val = read_dataframe(VAL_DATA_FILE_PATH)"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 29
   },
   {
    "cell_type": "code",
    "id": "f6f2f0eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:42:59.453791Z",
-     "start_time": "2025-05-26T07:42:59.449064Z"
+     "end_time": "2025-05-26T07:51:47.201004Z",
+     "start_time": "2025-05-26T07:51:47.197819Z"
     }
    },
    "source": [
@@ -234,20 +245,20 @@
        "(73908, 61921)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 30
   },
   {
    "cell_type": "code",
    "id": "951d51ef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:43:00.453716Z",
-     "start_time": "2025-05-26T07:43:00.424589Z"
+     "end_time": "2025-05-26T07:51:47.299287Z",
+     "start_time": "2025-05-26T07:51:47.278502Z"
     }
    },
    "source": [
@@ -255,15 +266,15 @@
     "df_val['PU_DO'] = df_val['PULocationID'] + '_' + df_val['DOLocationID']"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 31
   },
   {
    "cell_type": "code",
    "id": "c5cbfc25",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:43:02.339792Z",
-     "start_time": "2025-05-26T07:43:02.049652Z"
+     "end_time": "2025-05-26T07:51:47.659979Z",
+     "start_time": "2025-05-26T07:51:47.359738Z"
     }
    },
    "source": [
@@ -279,15 +290,15 @@
     "X_val = dv.transform(val_dicts)"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 32
   },
   {
    "cell_type": "code",
    "id": "1e9fb68b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:43:03.253320Z",
-     "start_time": "2025-05-26T07:43:03.250638Z"
+     "end_time": "2025-05-26T07:51:47.698249Z",
+     "start_time": "2025-05-26T07:51:47.695957Z"
     }
    },
    "source": [
@@ -296,15 +307,15 @@
     "y_val = df_val[target].values"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 33
   },
   {
    "cell_type": "code",
    "id": "429e2394",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:43:05.531897Z",
-     "start_time": "2025-05-26T07:43:05.447478Z"
+     "end_time": "2025-05-26T07:51:47.848847Z",
+     "start_time": "2025-05-26T07:51:47.761251Z"
     }
    },
    "source": [
@@ -322,20 +333,20 @@
        "7.75871521021275"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 34
   },
   {
    "cell_type": "code",
    "id": "a4999b94",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T07:48:00.436574Z",
-     "start_time": "2025-05-26T07:47:54.121677Z"
+     "end_time": "2025-05-26T07:52:20.521054Z",
+     "start_time": "2025-05-26T07:52:17.179434Z"
     }
    },
    "source": [
@@ -345,7 +356,7 @@
     "    mlflow.log_param('train-data-file-path', TRAIN_DATA_FILE_PATH)\n",
     "    mlflow.log_param('val-data-file-path', VAL_DATA_FILE_PATH)\n",
     "\n",
-    "    alpha = 0.01\n",
+    "    alpha = 0.1\n",
     "    mlflow.log_param('alpha', alpha)\n",
     "\n",
     "    lr = Lasso(alpha=alpha)\n",
@@ -357,7 +368,7 @@
     "    mlflow.log_metric('rmse', rmse)"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 35
   }
  ],
  "metadata": {
