--- a/02-experiment-tracking/homework/homework2.ipynb
+++ b/02-experiment-tracking/homework/homework2.ipynb
@@ -9,7 +9,7 @@
     "The goal of this homework is to get familiar with MLflow, the tool for experiment tracking and\n",
     "model management."
    ],
-   "id": "3c4ad73f95da359d"
+   "id": "7a79f0092d9926e3"
   },
   {
    "metadata": {},
@@ -25,32 +25,19 @@
     "\n",
     "What's the version that you have?"
    ],
-   "id": "b7cc7422280b979e"
+   "id": "4df91491a0583c47"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-27T07:28:48.770214Z",
-     "start_time": "2025-05-27T07:28:47.124553Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import mlflow\n",
     "\n",
     "print(mlflow.__version__)"
    ],
-   "id": "ae9bf76d865d7abb",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.22.0\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "id": "efce8767ecce7c04"
   },
   {
    "metadata": {},
@@ -85,15 +72,48 @@
     "* 4\n",
     "* 7"
    ],
-   "id": "da128b0e0ef004dc"
+   "id": "c3a93f5d3711c5c6"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T07:54:12.265686Z",
+     "start_time": "2025-05-27T07:54:11.306809Z"
+    }
+   },
    "cell_type": "code",
+   "source": "%run preprocess_data.py --raw_data_path ../data --dest_path ./output",
+   "id": "3911057b4003b4f9",
    "outputs": [],
-   "execution_count": null,
-   "source": "# TODO : Complete Q2",
-   "id": "64f3f0179040313c"
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T07:56:43.649563Z",
+     "start_time": "2025-05-27T07:56:43.644205Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "output_dir = Path('./output')\n",
+    "\n",
+    "file_count = len([f for f in output_dir.iterdir() if f.is_file()])\n",
+    "print(f\"Number of files: {file_count}\")"
+   ],
+   "id": "1b836d90b0e2f2d5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of files: 4\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -124,38 +144,7 @@
     "* 8\n",
     "* 10"
    ],
-   "id": "6b4f9bffa1a8c42d"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "## Q3. Train a model with autolog\n",
-    "\n",
-    "We will train a `RandomForestRegressor` (from Scikit-Learn) on the taxi dataset.\n",
-    "\n",
-    "We have prepared the training script `train.py` for this exercise, which can be also found in the folder [`homework`](homework2).\n",
-    "\n",
-    "The script will:\n",
-    "\n",
-    "* load the datasets produced by the previous step,\n",
-    "* train the model on the training set,\n",
-    "* calculate the RMSE score on the validation set.\n",
-    "\n",
-    "Your task is to modify the script to enable **autologging** with MLflow, execute the script and then launch the MLflow UI to check that the experiment run was properly tracked.\n",
-    "\n",
-    "Tip 1: don't forget to wrap the training code with a `with mlflow.start_run():` statement as we showed in the videos.\n",
-    "\n",
-    "Tip 2: don't modify the hyperparameters of the model to make sure that the training will finish quickly.\n",
-    "\n",
-    "What is the value of the `min_samples_split` parameter:\n",
-    "\n",
-    "* 2\n",
-    "* 4\n",
-    "* 8\n",
-    "* 10"
-   ],
-   "id": "27e4622ddf603377"
+   "id": "2888c752878667e5"
   },
   {
    "metadata": {},
@@ -163,7 +152,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "# TODO: Complete Q3",
-   "id": "38d03ad19756cc61"
+   "id": "917f50a1314b75f4"
   },
   {
    "metadata": {},
@@ -187,7 +176,7 @@
     "* `artifacts-only`\n",
     "* `artifacts-destination`"
    ],
-   "id": "13ff04ff94c1d885"
+   "id": "dc482a270e64e011"
   },
   {
    "metadata": {},
@@ -195,7 +184,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "# TODO: Complete Q4",
-   "id": "11f6046527b9d7df"
+   "id": "db848d6428256a44"
   },
   {
    "metadata": {},
@@ -224,7 +213,7 @@
     "* 5.818\n",
     "* 6.336\n"
    ],
-   "id": "9ab5b287466363df"
+   "id": "a3fba67d77be5fbe"
   },
   {
    "metadata": {},
@@ -232,7 +221,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "# TODO: Complete Q5",
-   "id": "5ff6d60d084458c0"
+   "id": "aeecf7a3a8d36ef6"
   },
   {
    "metadata": {},
@@ -257,7 +246,7 @@
     "* 6.061\n",
     "* 6.568"
    ],
-   "id": "81e7cb510d02af68"
+   "id": "56d8c528185363a0"
   },
   {
    "metadata": {},
@@ -265,7 +254,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "# TODO: Complete Q6",
-   "id": "95f20467d3cf064a"
+   "id": "8160cd79775c81cf"
   }
  ],
  "metadata": {},
