--- a/02-experiment-tracking/homework/homework2.ipynb
+++ b/02-experiment-tracking/homework/homework2.ipynb
@@ -28,16 +28,29 @@
    "id": "4df91491a0583c47"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T08:01:14.693403Z",
+     "start_time": "2025-05-27T08:01:13.499414Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import mlflow\n",
     "\n",
     "print(mlflow.__version__)"
    ],
-   "id": "efce8767ecce7c04"
+   "id": "efce8767ecce7c04",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.22.0\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -147,12 +160,71 @@
    "id": "2888c752878667e5"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T08:01:18.841071Z",
+     "start_time": "2025-05-27T08:01:18.505368Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "home_path_str = Path.home()\n",
+    "backend_store_uri = f'sqlite:///{home_path_str}/mlflow/backend/mlflow.db'\n",
+    "artifact_location = f'file:{home_path_str}/mlflow/mlruns'\n",
+    "\n",
+    "# Setting backend store\n",
+    "mlflow.set_tracking_uri(uri=backend_store_uri)\n",
+    "\n",
+    "# Setting experiment configuration (name and artifact location)\n",
+    "experiment_name = \"homework2-experiment\"\n",
+    "experiment = mlflow.get_experiment_by_name(experiment_name)\n",
+    "\n",
+    "if experiment is None:\n",
+    "    experiment_id = mlflow.create_experiment(\n",
+    "        name=experiment_name,\n",
+    "        artifact_location=artifact_location\n",
+    "    )\n",
+    "mlflow.set_experiment(experiment_name=experiment_name)"
+   ],
+   "id": "917f50a1314b75f4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:/home/jxareas/mlflow/mlruns', creation_time=1748332878823, experiment_id='3', last_update_time=1748332878823, lifecycle_stage='active', name='homework2-experiment', tags={}>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T08:15:32.619271Z",
+     "start_time": "2025-05-27T08:15:19.391939Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "%run train.py",
+   "id": "b5c6c0b3127efab2",
    "outputs": [],
-   "execution_count": null,
-   "source": "# TODO: Complete Q3",
-   "id": "917f50a1314b75f4"
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "**Homework 2 Random Forest Logged Params** (with `min_samples_split`):\n",
+    "\n",
+    "![](../images/hw2-rf-logged-params.png)\n",
+    "\n",
+    "Hence, the value for `min_samples_split` is 2, as shown in the image."
+   ],
+   "id": "30ecd5e787bbc7bc"
   },
   {
    "metadata": {},
@@ -180,11 +252,20 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# TODO: Complete Q4",
-   "id": "db848d6428256a44"
+   "cell_type": "markdown",
+   "source": [
+    "The `default-artifact-root`, as shown by script\n",
+    "```bash\n",
+    "BACKEND_STORE_URI=\"sqlite:///$HOME/mlflow/backend/mlflow.db\"\n",
+    "ARTIFACT_ROOT=\"$HOME/mlflow/artifacts\"\n",
+    "\n",
+    "# Start MLflow UI\n",
+    "mlflow ui \\\n",
+    "  --backend-store-uri \"$BACKEND_STORE_URI\" \\\n",
+    "  --default-artifact-root \"$ARTIFACT_ROOT\"\n",
+    "```"
+   ],
+   "id": "8f3c2ff5431c8f74"
   },
   {
    "metadata": {},
@@ -216,12 +297,97 @@
    "id": "a3fba67d77be5fbe"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T08:30:54.372444Z",
+     "start_time": "2025-05-27T08:29:48.318122Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# TODO: Complete Q5",
-   "id": "aeecf7a3a8d36ef6"
+   "source": "%run hpo.py",
+   "id": "aeecf7a3a8d36ef6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run handsome-hog-164 at: http://127.0.0.1:5000/#/experiments/4/runs/95c51a788e4b4896943c27583bbe9228\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4\n",
+      "\n",
+      "🏃 View run salty-dove-789 at: http://127.0.0.1:5000/#/experiments/4/runs/89e6bfcb410f4559ace61881fdfe052f\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run fun-boar-141 at: http://127.0.0.1:5000/#/experiments/4/runs/cdb8de5f8aa540fbaaba9b4739d980a0\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run sincere-shoat-605 at: http://127.0.0.1:5000/#/experiments/4/runs/9102bd5902c74f2fbc2dad64d6f66325\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run legendary-gnat-4 at: http://127.0.0.1:5000/#/experiments/4/runs/27c4bed41e484af18a05de0bd22d9745\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run valuable-fish-486 at: http://127.0.0.1:5000/#/experiments/4/runs/0cb8efd9b9d547b7a8fc09f30f4f9d59\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run classy-shark-413 at: http://127.0.0.1:5000/#/experiments/4/runs/2a539f87b32849119854f21c7b28702b\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run languid-grouse-723 at: http://127.0.0.1:5000/#/experiments/4/runs/1622a51c3ba744bd8e24c5ea45b0f24f\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run colorful-hound-531 at: http://127.0.0.1:5000/#/experiments/4/runs/b5e7c2743c744f24bebd6d4bbbf130a3\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run invincible-skink-362 at: http://127.0.0.1:5000/#/experiments/4/runs/ec874a20abd1443f82df5fbd8c7f2d58\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                   \n",
+      "\n",
+      "🏃 View run gentle-conch-480 at: http://127.0.0.1:5000/#/experiments/4/runs/05b627c425d84520b69e7a083141ea7e\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                    \n",
+      "\n",
+      "🏃 View run bright-skink-94 at: http://127.0.0.1:5000/#/experiments/4/runs/c10290eb3def465f8ec1f2b928a3ba34\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                    \n",
+      "\n",
+      "🏃 View run whimsical-moth-602 at: http://127.0.0.1:5000/#/experiments/4/runs/fca73377867044ab916491c3f92cc46e\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                    \n",
+      "\n",
+      "🏃 View run upset-cod-956 at: http://127.0.0.1:5000/#/experiments/4/runs/b9647a36baa34d278b39110f09ad843c\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                    \n",
+      "\n",
+      "🏃 View run treasured-crab-531 at: http://127.0.0.1:5000/#/experiments/4/runs/514727f14dc84e1a887f5663c38c661f\n",
+      "\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/4                    \n",
+      "\n",
+      "100%|██████████| 15/15 [01:06<00:00,  4.40s/trial, best loss: 5.335419588556921]\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Random Forest HyperOpt Descending RMSE:\n",
+    "\n",
+    "![](../images/hw2-rf-hyperopt-desc-rmse.png)\n",
+    "\n",
+    "The best validation RMSE gotten in the trials is `5.335`."
+   ],
+   "id": "7c15d8c8b33e03c5"
   },
   {
    "metadata": {},
@@ -249,12 +415,72 @@
    "id": "56d8c528185363a0"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T08:41:31.390061Z",
+     "start_time": "2025-05-27T08:40:36.050160Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# TODO: Complete Q6",
-   "id": "8160cd79775c81cf"
+   "source": "%run register_model.py",
+   "id": "8160cd79775c81cf",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/05/27 02:40:36 INFO mlflow.tracking.fluent: Experiment with name 'random-forest-best-models' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run welcoming-wren-173 at: http://127.0.0.1:5000/#/experiments/5/runs/b08ba25ef4604a8e89d445786475dadf\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/5\n",
+      "🏃 View run placid-mare-695 at: http://127.0.0.1:5000/#/experiments/5/runs/6085cc78cfc94202accb56f8bc649007\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/5\n",
+      "🏃 View run lyrical-pug-814 at: http://127.0.0.1:5000/#/experiments/5/runs/bdc2e9cef16d42c4815493f4bdaf1b00\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/5\n",
+      "🏃 View run nervous-rat-246 at: http://127.0.0.1:5000/#/experiments/5/runs/69dc6c32447841e08f89b6f163cd9c15\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'random-forest-model'.\n",
+      "2025/05/27 02:41:31 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: random-forest-model, version 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run stylish-zebra-547 at: http://127.0.0.1:5000/#/experiments/5/runs/93349ec6e3b240dcb8c3b269c64d925f\n",
+      "🧪 View experiment at: http://127.0.0.1:5000/#/experiments/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created version '1' of model 'random-forest-model'.\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "![](../images/hw2-rf-best-models-test-rmse.png)\n",
+    "\n",
+    "Test RMSE for the selected Random Forest model is `5.57`."
+   ],
+   "id": "f254a5b1c55a0cca"
   }
  ],
  "metadata": {},
